--- a/index.html
+++ b/index.html
@@ -242,8 +242,6 @@
 <!-- =========================== -->
 
 
-
-
 <!-- =================================-->
 <!-- content block up section start -->
 <!-- ================================ -->
@@ -729,6 +727,10 @@
 <!-- footer section ends -->
 <!-- ================================ -->
 
+
+<!-- ================================ -->
+<!-- copyright section start -->
+<!-- ================================ -->
 <div class="copyright-section py-80">
   <div class="container">
     <div class="row">
@@ -741,7 +743,9 @@
     </div>
   </div>
 </div>
-
+<!-- ================================ -->
+<!-- copyright section ends -->
+<!-- ================================ -->
 
 
 <!--==================================================-->
